# size-estimation

./: README.md
size_estimation/: MEASUREMENT_ALGORITHMS.md  README.md  pubspec.yaml
size_estimation/.agent/analysis/: native_implementation_status.md
size_estimation/.agent/fixes/: aspect_ratio_implementation.md  full_width_camera_fix.md  object_detection_debugging.md
size_estimation/.agent/guides/: feature_filtering_native.md  ml_kit_integration.md  tensorflow_lite_integration.md
size_estimation/.agent/plans/: object_detection_integration.md
size_estimation/.agent/summaries/: object_detection_complete.md  object_detection_phase_4_complete.md
size_estimation/.agent/tasks/: object_detection_integration.md
size_estimation/android/app/: build.gradle
size_estimation/ios/Runner/: Info.plist
size_estimation/ios/Runner.xcodeproj/: project.pbxproj
size_estimation/lib/: main.dart
size_estimation/lib/bindings/: index.dart  photogrammetry_bindings.dart
size_estimation/lib/constants/: camera_aspect_ratio.dart  estimation_mode.dart  ground_plane_config.dart  image_quality_threshold.dart  index.dart  planar_object_config.dart  required_permissions.dart  route_names.dart  translate.dart
size_estimation/lib/models/: bounding_box.dart  calibration_profile.dart  camera_intrinsics.dart  camera_metadata.dart  captured_image.dart  estimation_mode.dart  index.dart  (+2 more)
size_estimation/linux/: CMakeLists.txt
size_estimation/native_src/: CMakeLists.txt  photogrammetry.cpp
size_estimation/web/: index.html  manifest.json
size_estimation/windows/: CMakeLists.txt
(+97 files in other folders)
